--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #d6e2f0;
+  font-family: "Outfit", sans-serif;
+}
+
+img {
+  width: 100%;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  min-height: 100vh;
+  justify-content: center;
+}
+
+.main-container {
+  background-color: #ffffff;
+  padding: 20px;
+  width: 85%;
+  border-radius: 15px;
+}
+.main-container .img-container {
+  width: 100%;
+}
+.main-container .img-container img {
+  border-radius: 13px;
+}
+.main-container .text-container {
+  margin: 30px 0;
+  text-align: center;
+  padding: 0 20px;
+}
+.main-container .text-container h1 {
+  font-size: 22px;
+  color: #1f3251;
+  margin-bottom: 15px;
+}
+.main-container .text-container p {
+  font-size: 15px;
+  color: #7b879d;
+}
+
+footer {
+  font-size: 11px;
+  text-align: center;
+  padding: 20px 0;
+}
+footer a {
+  color: #3685ff;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=styles.css.map */
