--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,6 @@
+// Font
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 // Apply to all
 * {
     margin: 0;
@@ -9,5 +12,72 @@
 $white: #ffffff;
 $light-gray: #d6e2f0;
 $grayish-blue: #7b879d;
+$blue: #3685ff;
 $dark-blue: #1f3251;
 $darker-blue: #0E0824;
+
+
+body {
+    background-color: $light-gray;
+    font-family: "Outfit", sans-serif;
+}
+
+img {
+    width: 100%
+}
+
+main {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+    justify-content: center;
+    
+}
+
+.main-container {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 85%;
+    border-radius: 15px;
+
+    .img-container {
+        width: 100%;
+
+        img {
+            border-radius: 13px;
+        }
+    }
+
+    .text-container {
+        margin: 30px 0;
+        text-align: center;
+        padding: 0 20px;
+
+        h1 {
+            font-size: 22px;
+            color: $dark-blue;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 15px;
+            color: $grayish-blue;
+        }
+    }
+}
+
+footer {
+    font-size: 11px; 
+    text-align: center; 
+    padding: 20px 0;
+    
+    a { 
+        color: $blue;
+        text-decoration: none; 
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
